# DTScribe

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: description_framework_table.csv  dt_char_presence.csv
experiments_1c_incubator/characteristics_extraction/: 20251226_163627_df5792932718_20251226152223_characteristics.json
experiments_1c_incubator/oml_generation/: 20251226_163712_df5792932718_20251226152223_oml.oml  20251226_163712_df5792932718_20251226152223_oml_oml.json
experiments_aeco/analysis/: accuracy_matrix_table.tex  detailed_block_metrics_ministral-3_3b-cloud.csv  oml_success_summary.csv  resource_usage_oml.csv
experiments_aeco/characteristics_extraction/: 20260130_164115_895e66b3efdd_20260130213659_characteristics.json  20260130_164128_f6d424bfddae_20260130213703_characteristics.json  20260130_164715_c5cacdea8478_20260130214255_characteristics.json  20260130_165101_f29294951811_20260130214713_characteristics.json  20260130_165143_822c115e5666_20260130214752_characteristics.json  20260130_165212_b9bfdc680e6f_20260130214827_characteristics.json  20260130_165704_d47d68bb3e70_20260130215247_characteristics.json  20260130_170141_9ffbe3b2ce41_20260130215808_characteristics.json  (+255 more)
models/: schemas.py
notebooks/: description_similarity.ipynb
src/: abstractions.py  advanced_main.py  enhanced_main.py  experiment_runner.py  experiment_tracking.py  hyperparameter_tuning.py  implementations.py  judge_evaluator.py  main.py  results_analyzer.py  results_visualizer.py  solid_main.py
utils/: rag_config.py
(+17336 files in other folders)
