[project]
name = "llm2dtdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.0",
    "llmsherpa>=0.1.4",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pdfminer-six==20240706",
    "pymupdf>=1.26.1",
    "pymupdf4llm>=0.0.25",
    "pypdf>=5.7.0",
    "scikit-learn>=1.7.0",
    "tabulate>=0.9.0",
    "unstructured[all-docs]>=0.18.7",
]
